--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<!-- 배경지도 영역 추가하기-->
 	<div id="map" class="map"></div>
 	<script>
-		var lat = 36.1358642; //위도
-		var lng = 128.0785804; //경도
+		var lat = 40.0; //위도
+		var lng = 110.0; //경도
 		var zoom = 10; //줌 레벨
 		var mymap = L.map('map', {
 			center: [lat, lng],
