--- a/corona/index.html
+++ b/corona/index.html
@@ -20,7 +20,7 @@
 	<!-- 배경지도 영역 추가하기-->
 	<div id="mapid" class="map"></div>
 	<script>
-		/*
+		
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
@@ -32,15 +32,23 @@
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(mymap);*/
-		
-		var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-    		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    		maxZoom: 18,
-    		id: 'mapbox/streets-v11',
-    		accessToken: 'your.mapbox.access.token'
 		}).addTo(mymap);
+		
+		 // Creating a map object
+		 var map = new L.map('mapid', mapOptions);
+
+		 // Creating a Layer object
+		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+
+		 // Adding layer to the map
+		 map.addLayer(layer);
+
+		 // Creating a marker
+		 var marker = L.marker([17.385044, 78.486671]);
+
+		 // Adding marker to the map
+		 marker.addTo(map);
+
 		
 	</script>
 </body>
