--- a/corona/index.html
+++ b/corona/index.html
@@ -44,7 +44,7 @@
 		 map.addLayer(layer);
 
 		 // Creating a marker
-		 var marker = L.marker([17.385044, 78.486671]);
+		 var marker = L.marker([lat, lng]);
 
 		 // Adding marker to the map
 		 marker.addTo(map);
