--- a/corona/index.html
+++ b/corona/index.html
@@ -28,6 +28,7 @@
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
+		/*
 		var map = L.map('map', {
 			center: [lat, lng],
 			zoom: zoom
@@ -37,7 +38,11 @@
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
 		}).addTo(map);
-		
+		*/
+	 var mapOptions = {
+            center: [lat, lng],
+            zoom: zoom
+         }
 		 // Creating a map object
 		 var map_ob = new L.map('map', mapOptions);
 
