--- a/corona/index.html
+++ b/corona/index.html
@@ -44,7 +44,7 @@
             zoom: zoom
          }
 		 // Creating a map object
-		 var map_ob = new L.map('map', mapOptions);
+		 var map = new L.map('map', mapOptions);
 
 		 // Creating a Layer object
 		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
