--- a/corona/index.html
+++ b/corona/index.html
@@ -20,17 +20,18 @@
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
-		/*
-		var map = L.map('map', {
-			center: [lat, lng],
-			zoom: zoom
-		});
+		
+		//var map = L.map('map', {
+		//	center: [lat, lng],
+		//	zoom: zoom
+		//});
+		
 		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
 		}).addTo(map);
-		*/
+		
 	 var mapOptions = {
             center: [lat, lng],
             zoom: zoom
