--- a/corona/index.html
+++ b/corona/index.html
@@ -21,10 +21,10 @@
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
 		
-		//var map = L.map('map', {
-		//	center: [lat, lng],
-		//	zoom: zoom
-		//});
+		var map = L.map('map', {
+			center: [lat, lng],
+			zoom: zoom
+		});
 		
 		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
