--- a/coronago/index.html
+++ b/coronago/index.html
@@ -22,7 +22,7 @@
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
-		var mymap = L.map('map', {
+		var map = L.map('map', {
 			center: [lat, lng],
 			zoom: zoom
 		});
@@ -30,7 +30,31 @@
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(mymap);
+		}).addTo(map);
+		
+				 var mapOptions = {
+	            center: [lat, lng],
+	            zoom: zoom
+	         }
+			 // Creating a map object
+			 var map = new L.map('map', mapOptions);
+	
+
+			 // Creating a Layer object
+			 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+	
+
+			 // Adding layer to the map
+			 map.addLayer(layer);
+	
+
+			 // Creating a marker
+			 var marker = L.marker([lat, lng]);
+	
+
+			 // Adding marker to the map
+			 marker.addTo(map);
+
 	</script>
 </body>
 
