--- a/coronago/index.html
+++ b/coronago/index.html
@@ -22,10 +22,10 @@
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
-		//var map = L.map('map', {
-		//	center: [lat, lng],
-		//	zoom: zoom
-		//});
+		var map = L.map('map', {
+			center: [lat, lng],
+			zoom: zoom
+		});
 
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
