--- a/coronago/index.html
+++ b/coronago/index.html
@@ -19,7 +19,15 @@
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
-
+		var map = L.map('map').setView([lat, lng], zoom);
+		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+		    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		    maxZoom: 18,
+		    id: 'mapbox/streets-v11',
+		    accessToken: 'your.mapbox.access.token'
+		}).addTo(map);
+		
+		
 		var mapOptions = {
 	            center: [lat, lng],
 	            zoom: zoom
