--- a/coronago/index.html
+++ b/coronago/index.html
@@ -39,7 +39,7 @@
 	            zoom: zoom
 	         }
 			 // Creating a map object
-			 var map = new L.map('map', mapOptions);
+			 var mymap2 = new L.map('map', mapOptions);
 	
 
 			 // Creating a Layer object
@@ -55,7 +55,7 @@
 	
 
 			 // Adding marker to the map
-			 marker.addTo(mymap);
+			 marker.addTo(mymap2);
 
 		
 		
