--- a/coronago/index.html
+++ b/coronago/index.html
@@ -2,18 +2,9 @@
 <html>
 
 <head>
-	<!--STEP 1: CSS 추가하기 -->
-	<!--CDN 방식 -->
-	<!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"/>-->
-	<!-- Download 방식 -->
-	<link rel="stylesheet" href="css/leaflet@1.3.3/leaflet.css"/>
-	<!--STEP 3: 지도 영역 관련 CSS 추가하기 -->
-	<link rel="stylesheet" href="css/main.css"/>
-	<!--STEP 2: JS 추가하기 -->
-	<!--CDN 방식 -->
-	<!--<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>-->
-	<!-- Download 방식 -->
-	<script src="js/leaflet@1.3.3/leaflet.js"></script>
+      <title>Leaflet sample</title>
+      <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+      <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
 
 <body>
