--- a/coronago/index.html
+++ b/coronago/index.html
@@ -2,13 +2,19 @@
 <html>
 
 <head>
- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin=""/>
- <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-   integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-   crossorigin=""></script>
+		<!--STEP 1: CSS 추가하기 -->
+		<!--CDN 방식 -->
+		<!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"/>-->
+		<!-- Download 방식 -->
+		<link rel="stylesheet" href="css/leaflet@1.3.3/leaflet.css"/>
+		<!--STEP 3: 지도 영역 관련 CSS 추가하기 -->
+		<link rel="stylesheet" href="css/main.css"/>
+		<!--STEP 2: JS 추가하기 -->
+		<!--CDN 방식 -->
+		<!--<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>-->
+		<!-- Download 방식 -->
+		<script src="js/leaflet@1.3.3/leaflet.js"></script>
+
 </head>
 
 <body>
