--- a/coronago/index.html
+++ b/coronago/index.html
@@ -21,46 +21,49 @@
 	<!-- 배경지도 영역 추가하기-->
 	<div id="map" class="map"></div>
 	<script>
+		
 		var lat = 37.350127; //위도
 		var lng = 127.148092; //경도
 		var zoom = 9; //줌 레벨
-		var mymap = L.map('map', {
+		
+		var map = L.map('map', {
 			center: [lat, lng],
 			zoom: zoom
 		});
+		
 		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(mymap);
+		}).addTo(map);
 		
-		
-		 var mapOptions = {
-	            center: [lat, lng],
-	            zoom: zoom
-	         }
-			 // Creating a map object
-			 var mymap2 = new L.map('map', mapOptions);
-	
+	 var mapOptions = {
+            center: [lat, lng],
+            zoom: zoom
+         }
+		 // Creating a map object
+		 var map = new L.map('map', mapOptions);
 
-			 // Creating a Layer object
-			 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-	
 
-			 // Adding layer to the map
-			 map.addLayer(layer);
-	
+		 // Creating a Layer object
+		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 
-			 // Creating a marker
-			 var marker = L.marker([lat, lng]);
-	
 
-			 // Adding marker to the map
-			 marker.addTo(mymap2);
+		 // Adding layer to the map
+		 map.addLayer(layer);
 
-		
+
+		 // Creating a marker
+		 var marker = L.marker([lat, lng]);
+
+
+		 // Adding marker to the map
+		 marker.addTo(map);
+
+
 		
 	</script>
 </body>
+
 
 </html>
