--- a/coronago/index.html
+++ b/coronago/index.html
@@ -34,18 +34,18 @@
 		
 		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
-		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(map);
+		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		//	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
+		//}).addTo(map);
 		
 	         // Creating a Layer object
 		 //var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-
-
+		 
 		 // Adding layer to the map
 		 //map.addLayer(layer);
 
-
+		 L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+			
 		 // Creating a marker
 		 var marker = L.marker([lat, lng]);
 
