--- a/coronago/index.html
+++ b/coronago/index.html
@@ -40,11 +40,13 @@
 		
 	         // Creating a Layer object
 		 //var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-		 
+		 var layer = new L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
+		}).addTo(map); 
+		
 		 // Adding layer to the map
-		 //map.addLayer(layer);
+		 map.addLayer(layer);
 
-		 L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 			
 		 // Creating a marker
 		 var marker = L.marker([lat, lng]);
