--- a/coronago/index.html
+++ b/coronago/index.html
@@ -34,26 +34,36 @@
 		
 		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
-		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-		//	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		//}).addTo(map);
+		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
+		}).addTo(map);
 		
 	         // Creating a Layer object
 		 //var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-		 var layer = new L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(map); 
 		
 		 // Adding layer to the map
-		 map.addLayer(layer);
+		 //map.addLayer(layer);
 
+		
+		var greenIcon = L.icon({
+		    iconUrl: 'leaf-green.png',
+		    shadowUrl: 'leaf-shadow.png',
+
+		    iconSize:     [38, 95], // size of the icon
+		    shadowSize:   [50, 64], // size of the shadow
+		    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
+		    shadowAnchor: [4, 62],  // the same for the shadow
+		    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+		});
+		L.marker([lat, -lng], {icon: greenIcon}).addTo(map);
+		
 			
 		 // Creating a marker
-		 var marker = L.marker([lat, lng]);
+		 //var marker = L.marker([lat, lng]);
 
 
 		 // Adding marker to the map
-		 marker.addTo(map);
+		 //marker.addTo(map);
 
 
 		
