--- a/coronago/index.html
+++ b/coronago/index.html
@@ -55,7 +55,7 @@
 		    shadowAnchor: [4, 62],  // the same for the shadow
 		    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
 		});
-		L.marker([lat, -lng], {icon: greenIcon}).addTo(map);
+		L.marker([lat, lng], {icon: greenIcon}).addTo(map);
 		
 			
 		 // Creating a marker
