--- a/coronago/index.html
+++ b/coronago/index.html
@@ -39,10 +39,10 @@
 		}).addTo(map);
 		
 	         // Creating a Layer object
-		 //var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 		
 		 // Adding layer to the map
-		 //map.addLayer(layer);
+		 map.addLayer(layer);
 
 		
 		var greenIcon = L.icon({
