--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
 		L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
 		}).addTo(mymap);
+		
+		var greenIcon = L.icon({
+		    iconUrl: 'leaf-orange.png',
+		    shadowUrl: 'leaf-shadow.png',
+
+		    iconSize:     [38, 95], // size of the icon
+		    shadowSize:   [50, 64], // size of the shadow
+		    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
+		    shadowAnchor: [4, 62],  // the same for the shadow
+		    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+		});
+		L.marker([lat, lng], {icon: greenIcon}).addTo(map);
+		
 	</script>
 </body>
 
