--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		var lat = 39.0; //위도
 		var lng = 104.0; //경도
 		var zoom = 10; //줌 레벨
-		var mymap = L.map('map', {
+		var map = L.map('map', {
 			center: [lat, lng],
 			zoom: zoom
 		});
@@ -35,7 +35,7 @@
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(mymap);
+		}).addTo(map);
 		
 		var greenIcon = L.icon({
 		    iconUrl: 'leaf-orange.png',
