--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
 		}).addTo(map);
 		
-		var greenIcon = L.icon({
-		    iconUrl: 'leaf-orange.png',
-		    shadowUrl: 'leaf-shadow.png',
-
-		    iconSize:     [38, 95], // size of the icon
-		    shadowSize:   [50, 64], // size of the shadow
-		    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-		    shadowAnchor: [4, 62],  // the same for the shadow
-		    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-		});
-		L.marker([lat, lng], {icon: greenIcon}).addTo(map);
+	        // Creating a Layer object
+		var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 		
+		// Adding layer to the map
+		map.addLayer(layer);
+
+		var circle = L.circle([37.460353, 126.440653], {
+		    color: 'yellow',
+		    fillColor: '#f03',
+		    fillOpacity: 0.5,
+		    radius: 500
+		}).addTo(map);
+		
+
 	</script>
 </body>
 
