--- a/corona/index.html
+++ b/corona/index.html
@@ -20,9 +20,9 @@
 	<div id="map" class="map"></div>
 	<script>
 		var lat = 37.350127; //위도
-		var lng = 127.148092; //경도
-		var zoom = 9; //줌 레벨
-		var mymap = L.map('map', {
+		var lng = 126.648092; //경도
+		var zoom = 10; //줌 레벨
+		var map = L.map('map', {
 			center: [lat, lng],
 			zoom: zoom
 		});
@@ -30,19 +30,20 @@
 		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
 		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(mymap);
+		}).addTo(map);
 		
-		var greenIcon = L.icon({
-		    iconUrl: 'leaf-yellow.png',
-		    shadowUrl: 'leaf-shadow.png',
+	         // Creating a Layer object
+		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+		
+		 // Adding layer to the map
+		 map.addLayer(layer);
 
-		    iconSize:     [38, 95], // size of the icon
-		    shadowSize:   [50, 64], // size of the shadow
-		    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-		    shadowAnchor: [4, 62],  // the same for the shadow
-		    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
-		});
-		L.marker([lat, lng], {icon: greenIcon}).addTo(map);
+		var circle = L.circle([37.460353, 126.440653], {
+		    color: 'yellow',
+		    fillColor: '#f03',
+		    fillOpacity: 0.5,
+		    radius: 500
+		}).addTo(map);
 		
 	</script>
 </body>
