--- a/coronago/index.html
+++ b/coronago/index.html
@@ -38,29 +38,18 @@
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
 		}).addTo(map);
 		
-	         // Creating a Layer object
-		 var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+	        // Creating a Layer object
+		var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 		
-		 // Adding layer to the map
-		 map.addLayer(layer);
+		// Adding layer to the map
+		map.addLayer(layer);
 
 		var circle = L.circle([37.460353, 126.440653], {
 		    color: 'yellow',
 		    fillColor: '#f03',
 		    fillOpacity: 0.5,
 		    radius: 500
-		}).addTo(map);
-		
-		
-			
-		 // Creating a marker
-		 //var marker = L.marker([lat, lng]);
-
-
-		 // Adding marker to the map
-		 //marker.addTo(map);
-
-
+		}).addTo(map).bindPopup('확진자 contracted  <br> 격리 isolated.').openPopup();
 		
 	</script>
 </body>
