--- a/coronago/index.html
+++ b/coronago/index.html
@@ -49,7 +49,7 @@
 		    fillColor: '#f03',
 		    fillOpacity: 0.5,
 		    radius: 500
-		}).addTo(map).bindPopup('확진자 contracted  <br> 격리 isolated.').openPopup();
+		}).addTo(map).bindPopup('확진자 confirmed  <br> 격리 isolated.').openPopup();
 		
 	</script>
 </body>
