--- a/coronago/index.html
+++ b/coronago/index.html
@@ -48,8 +48,50 @@
 		    color: 'yellow',
 		    fillColor: '#f03',
 		    fillOpacity: 0.5,
-		    radius: 500
-		}).addTo(map).bindPopup('확진자 confirmed  <br> 격리 isolated.').openPopup();
+		    radius: 700
+		}).addTo(map).bindPopup('첫번째 확진자 1st confirmed  <br> 격리 isolated.')
+		
+		var circle = L.circle([37.460353, 125.440653], {
+		    color: 'yellow',
+		    fillColor: '#f03',
+		    fillOpacity: 0.5,
+		    radius: 700
+		}).addTo(map).bindPopup('첫번째 확진자 1st confirmed  <br> 격리 isolated.')
+		//.openPopup();
+		
+		
+	var cities = L.layerGroup();
+
+	L.marker([39.61, -105.02]).bindPopup('This is Littleton, CO.').addTo(cities),
+	L.marker([39.74, -104.99]).bindPopup('This is Denver, CO.').addTo(cities),
+	L.marker([39.73, -104.8]).bindPopup('This is Aurora, CO.').addTo(cities),
+	L.marker([39.77, -105.23]).bindPopup('This is Golden, CO.').addTo(cities);
+
+
+	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		mbUrl = 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw';
+
+	var grayscale   = L.tileLayer(mbUrl, {id: 'mapbox/light-v9', attribution: mbAttr}),
+		streets  = L.tileLayer(mbUrl, {id: 'mapbox/streets-v11',   attribution: mbAttr});
+
+	var map = L.map('map', {
+		center: [39.73, -104.99],
+		zoom: 10,
+		layers: [grayscale, cities]
+	});
+
+	var baseLayers = {
+		"Grayscale": grayscale,
+		"Streets": streets
+	};
+
+	var overlays = {
+		"Cities": cities
+	};
+
+	L.control.layers(baseLayers, overlays).addTo(map);
 		
 	</script>
 </body>
