--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -30,12 +30,12 @@
 <div id='map'></div>
 
 <script>
-	var cities = L.layerGroup();
+	var person = L.layerGroup();
 
-	L.marker([37.4605, 126.444]).bindPopup('This is Littleton, CO.').addTo(cities),
-	L.marker([37.4604, 126.443]).bindPopup('This is Denver, CO.').addTo(cities),
-	L.marker([37.4603, 126.442]).bindPopup('This is Aurora, CO.').addTo(cities),
-	L.marker([37.4600, 126.441]).bindPopup('This is Golden, CO.').addTo(cities);
+	L.marker([37.4605, 126.444]).bindPopup('This is Littleton, CO.').addTo(person),
+	//L.marker([37.592909, 127.016941]).bindPopup('This is Denver, CO.').addTo(person),
+	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person),
+	L.marker([37.4600, 126.441]).bindPopup('This is Golden, CO.').addTo(person);
 
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -49,7 +49,7 @@
 	var map = L.map('map', {
 		center: [37.460353, 126.440653],
 		zoom: 10,
-		layers: [grayscale, cities]
+		layers: [grayscale, person]
 	});
 
 	var baseLayers = {
@@ -58,9 +58,11 @@
 	};
 
 	var overlays = {
-		"Cities": cities
+		"Person 1": person
 	};
 
+	
+	
 	L.control.layers(baseLayers, overlays).addTo(map);
 </script>
 
