--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -18,8 +18,8 @@
 			margin: 0;
 		}
 		#map {
-			width: 600px;
-			height: 400px;
+			width: 800px;
+			height: 600px;
 		}
 	</style>
 
@@ -32,10 +32,10 @@
 <script>
 	var person = L.layerGroup();
 
-	L.marker([37.4605, 126.444]).bindPopup('This is Littleton, CO.').addTo(person),
+	L.marker([37.460353, 126.440653]).bindPopup('인천국제공항 Inchon Airport').addTo(person),
 	//L.marker([37.592909, 127.016941]).bindPopup('This is Denver, CO.').addTo(person),
 	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person),
-	L.marker([37.4600, 126.441]).bindPopup('This is Golden, CO.').addTo(person);
+	//L.marker([37.4600, 126.441]).bindPopup('This is Golden, CO.').addTo(person);
 
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -58,7 +58,7 @@
 	};
 
 	var overlays = {
-		"Person 1": person
+		"3th": person
 	};
 
 	
