--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -33,9 +33,7 @@
 	var person = L.layerGroup();
 
 	L.marker([37.460353, 126.440653]).bindPopup('인천국제공항 Inchon Airport').addTo(person),
-	//L.marker([37.592909, 127.016941]).bindPopup('This is Denver, CO.').addTo(person),
 	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person),
-	//L.marker([37.4600, 126.441]).bindPopup('This is Golden, CO.').addTo(person);
 
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -58,7 +56,7 @@
 	};
 
 	var overlays = {
-		"3th": person
+		"세번째 3th": person
 	};
 
 	
