--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -32,7 +32,7 @@
 <script>
 	var person3 = L.layerGroup();
 
-	L.marker([37.460353, 126.440653]).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
+	L.circle([37.460353, 126.440653], {color: 'yellow', fillColor: '#f03', fillOpacity: 0.5, radius: 700}).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
 	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person3);
 
 
